--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "harmony",
-  "homepage": "https://quincy-fer.github.io/harmony-hosted/",
+  "homepage": "https://quincy-fer.github.io/Harmony-Therapy-Website/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
