Remove not working scripts

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-  "homepage": "https://Quincy-Fer.github.io/Harmony-Therapy-Website/",
+  
   "name": "harmony",  
   "private": true,
   "version": "0.0.0",
@@ -8,9 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy" : "gh-pages -d dist"
+    "preview": "vite preview"   
   },
   "dependencies": {
     "gh-pages": "^6.3.0",
