--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 { 
   
-  "name": "harmony",  
+  "name": "harmony", 
+  "homepage" : "https://quincy-fer.github.io/Harmony-Therapy-Website/" ,
   "private": true,
   "version": "0.0.0",
   "type": "module",
